@@ -447,88 +447,172 @@ typedef DWORD LCID;
 #define VER_SUITE_STORAGE_SERVER 0x00002000
 #define VER_SUITE_COMPUTE_SERVER 0x00004000
 
+#define PRODUCT_UNDEFINED                       0x0
+
+#define PRODUCT_ULTIMATE                        0x1
+#define PRODUCT_HOME_BASIC                      0x2
+#define PRODUCT_HOME_PREMIUM                    0x3
+#define PRODUCT_ENTERPRISE                      0x4
+#define PRODUCT_HOME_BASIC_N                    0x5
+#define PRODUCT_BUSINESS                        0x6
+#define PRODUCT_STANDARD_SERVER                 0x7
+#define PRODUCT_DATACENTER_SERVER               0x8
+#define PRODUCT_SMALLBUSINESS_SERVER            0x9
+#define PRODUCT_ENTERPRISE_SERVER               0xa
+#define PRODUCT_STARTER                         0xb
+#define PRODUCT_DATACENTER_SERVER_CORE          0xc
+#define PRODUCT_STANDARD_SERVER_CORE            0xd
+#define PRODUCT_ENTERPRISE_SERVER_CORE          0xe
+#define PRODUCT_ENTERPRISE_SERVER_IA64          0xf
+#define PRODUCT_BUSINESS_N                      0x10
+#define PRODUCT_WEB_SERVER                      0x11
+#define PRODUCT_CLUSTER_SERVER                  0x12
+#define PRODUCT_HOME_SERVER                     0x13
+#define PRODUCT_STORAGE_EXPRESS_SERVER          0x14
+#define PRODUCT_STORAGE_STANDARD_SERVER         0x15
+#define PRODUCT_STORAGE_WORKGROUP_SERVER        0x16
+#define PRODUCT_STORAGE_ENTERPRISE_SERVER       0x17
+#define PRODUCT_SERVER_FOR_SMALLBUSINESS        0x18
+#define PRODUCT_SMALLBUSINESS_SERVER_PREMIUM    0x19
+
+#define PRODUCT_UNLICENSED                      0xabcdabcd
+
 #define LANG_NEUTRAL 0x00
 #define LANG_INVARIANT 0x7f
 
 #define LANG_AFRIKAANS 0x36
 #define LANG_ALBANIAN 0x1c
+#define LANG_ALSATIAN 0x84
+#define LANG_AMHARIC 0x5e
 #define LANG_ARABIC 0x01
 #define LANG_ARMENIAN 0x2b
 #define LANG_ASSAMESE 0x4d
 #define LANG_AZERI 0x2c
+#define LANG_BASHKIR 0x6d
 #define LANG_BASQUE 0x2d
 #define LANG_BELARUSIAN 0x23
 #define LANG_BENGALI 0x45
+#define LANG_BRETON 0x7e
+#define LANG_BOSNIAN 0x1a
+#define LANG_BOSNIAN_NEUTRAL 0x781a
 #define LANG_BULGARIAN 0x02
 #define LANG_CATALAN 0x03
 #define LANG_CHINESE 0x04
+#define LANG_CHINESE_SIMPLIFIED 0x04
+#define LANG_CHINESE_TRADITIONAL 0x7c04
+#define LANG_CORSICAN 0x83
 #define LANG_CROATIAN 0x1a
 #define LANG_CZECH 0x05
 #define LANG_DANISH 0x06
+#define LANG_DARI 0x8c
 #define LANG_DIVEHI 0x65
 #define LANG_DUTCH 0x13
 #define LANG_ENGLISH 0x09
 #define LANG_ESTONIAN 0x25
 #define LANG_FAEROESE 0x38
 #define LANG_FARSI 0x29
+#define LANG_FILIPINO 0x64
 #define LANG_FINNISH 0x0b
 #define LANG_FRENCH 0x0c
+#define LANG_FRISIAN 0x62
 #define LANG_GALICIAN 0x56
 #define LANG_GEORGIAN 0x37
 #define LANG_GERMAN 0x07
 #define LANG_GREEK 0x08
+#define LANG_GREENLANDIC 0x6f
 #define LANG_GUJARATI 0x47
+#define LANG_HAUSA 0x68
 #define LANG_HEBREW 0x0d
 #define LANG_HINDI 0x39
 #define LANG_HUNGARIAN 0x0e
 #define LANG_ICELANDIC 0x0f
+#define LANG_IGBO 0x70
 #define LANG_INDONESIAN 0x21
+#define LANG_INUKTITUT 0x5d
+#define LANG_IRISH 0x3c
 #define LANG_ITALIAN 0x10
 #define LANG_JAPANESE 0x11
 #define LANG_KANNADA 0x4b
 #define LANG_KASHMIRI 0x60
 #define LANG_KAZAK 0x3f
+#define LANG_KHMER 0x53
+#define LANG_KICHE 0x86
+#define LANG_KINYARWANDA 0x87
 #define LANG_KONKANI 0x57
 #define LANG_KOREAN 0x12
 #define LANG_KYRGYZ 0x40
+#define LANG_LAO 0x54
 #define LANG_LATVIAN 0x26
 #define LANG_LITHUANIAN 0x27
+#define LANG_LOWER_SORBIAN 0x2e
+#define LANG_LUXEMBOURGISH 0x6e
 #define LANG_MACEDONIAN 0x2f
 #define LANG_MALAY 0x3e
 #define LANG_MALAYALAM 0x4c
+#define LANG_MALTESE 0x3a
 #define LANG_MANIPURI 0x58
+#define LANG_MAORI 0x81
+#define LANG_MAPUDUNGUN 0x7a
 #define LANG_MARATHI 0x4e
+#define LANG_MOHAWK 0x7c
 #define LANG_MONGOLIAN 0x50
 #define LANG_NEPALI 0x61
 #define LANG_NORWEGIAN 0x14
+#define LANG_OCCITAN 0x82
 #define LANG_ORIYA 0x48
+#define LANG_PASHTO 0x63
+#define LANG_PERSIAN 0x29
 #define LANG_POLISH 0x15
 #define LANG_PORTUGUESE 0x16
 #define LANG_PUNJABI 0x46
+#define LANG_QUECHUA 0x6b
 #define LANG_ROMANIAN 0x18
 #define LANG_RUSSIAN 0x19
+#define LANG_SAMI 0x3b
+#define LANG_ROMANSH 0x17
 #define LANG_SANSKRIT 0x4f
 #define LANG_SERBIAN 0x1a
+#define LANG_SERBIAN_NEUTRAL 0x7c1a
 #define LANG_SINDHI 0x59
+#define LANG_SINHALESE 0x5b
 #define LANG_SLOVAK 0x1b
 #define LANG_SLOVENIAN 0x24
+#define LANG_SOTHO 0x6c
 #define LANG_SPANISH 0x0a
 #define LANG_SWAHILI 0x41
 #define LANG_SWEDISH 0x1d
 #define LANG_SYRIAC 0x5a
+#define LANG_TAJIK 0x28
+#define LANG_TAMAZIGHT 0x5f
 #define LANG_TAMIL 0x49
 #define LANG_TATAR 0x44
 #define LANG_TELUGU 0x4a
 #define LANG_THAI 0x1e
+#define LANG_TIBETAN 0x51
+#define LANG_TIGRIGNA 0x73
+#define LANG_TSWANA 0x32
 #define LANG_TURKISH 0x1f
+#define LANG_TURKMEN 0x42
+#define LANG_UIGHUR 0x80
 #define LANG_UKRAINIAN 0x22
+#define LANG_UPPER_SORBIAN 0x2e
 #define LANG_URDU 0x20
 #define LANG_UZBEK 0x43
 #define LANG_VIETNAMESE 0x2a
+#define LANG_WELSH 0x52
+#define LANG_WOLOF 0x88
+#define LANG_XHOSA 0x34
+#define LANG_YAKUT 0x85
+#define LANG_YI 0x78
+#define LANG_YORUBA 0x6a
+#define LANG_ZULU 0x35
 
-#define SUBLANG_NEUTRAL 0x00
-#define SUBLANG_DEFAULT 0x01
-#define SUBLANG_SYS_DEFAULT 0x02
+#define SUBLANG_NEUTRAL 0x0
+#define SUBLANG_DEFAULT 0x1
+#define SUBLANG_SYS_DEFAULT 0x2
+#define SUBLANG_CUSTOM_DEFAULT 0x3
+#define SUBLANG_CUSTOM_UNSPECIFIED 0x4
+#define SUBLANG_UI_CUSTOM_DEFAULT 0x5
 
 #define SUBLANG_ARABIC_SAUDI_ARABIA 0x01
 #define SUBLANG_ARABIC_IRAQ 0x02
@@ -622,9 +706,11 @@ typedef DWORD LCID;
 #define SUBLANG_UZBEK_CYRILLIC 0x02
 
 #define SORT_DEFAULT 0x0
+#define SORT_INVARIANT_MATH 0x1
 
 #define SORT_JAPANESE_XJIS 0x0
 #define SORT_JAPANESE_UNICODE 0x1
+#define SORT_JAPANESE_RADICALSTROKE 0x4
 
 #define SORT_CHINESE_BIG5 0x0
 #define SORT_CHINESE_PRCP 0x0
@@ -655,6 +741,7 @@ typedef DWORD LCID;
 #define SORTIDFROMLCID(lcid) ((WORD)((((DWORD)(lcid)) >> 16) & 0xf))
 #define SORTVERSIONFROMLCID(lcid) ((WORD)((((DWORD)(lcid)) >> 20) & 0xf))
 
+#define LOCALE_NAME_MAX_LENGTH 85
 #define LANG_SYSTEM_DEFAULT (MAKELANGID(LANG_NEUTRAL,SUBLANG_SYS_DEFAULT))
 #define LANG_USER_DEFAULT (MAKELANGID(LANG_NEUTRAL,SUBLANG_DEFAULT))
 
@@ -662,6 +749,10 @@ typedef DWORD LCID;
 #define LOCALE_USER_DEFAULT (MAKELCID(LANG_USER_DEFAULT,SORT_DEFAULT))
 
 #define LOCALE_NEUTRAL (MAKELCID(MAKELANGID(LANG_NEUTRAL,SUBLANG_NEUTRAL),SORT_DEFAULT))
+
+#define LOCALE_CUSTOM_DEFAULT (MAKELCID(MAKELANGID(LANG_NEUTRAL, SUBLANG_CUSTOM_DEFAULT), SORT_DEFAULT))
+#define LOCALE_CUSTOM_UNSPECIFIED (MAKELCID(MAKELANGID(LANG_NEUTRAL, SUBLANG_CUSTOM_UNSPECIFIED), SORT_DEFAULT))
+#define LOCALE_CUSTOM_UI_DEFAULT (MAKELCID(MAKELANGID(LANG_NEUTRAL, SUBLANG_UI_CUSTOM_DEFAULT), SORT_DEFAULT))
 
 #define LOCALE_INVARIANT (MAKELCID(MAKELANGID(LANG_INVARIANT,SUBLANG_NEUTRAL),SORT_DEFAULT))
 
@@ -1980,6 +2071,7 @@ typedef DWORD LCID;
 #define SECURITY_TERMINAL_SERVER_RID (0x0000000DL)
 #define SECURITY_REMOTE_LOGON_RID (0x0000000EL)
 #define SECURITY_THIS_ORGANIZATION_RID (0x0000000FL)
+#define SECURITY_IUSER_RID (0x00000011L)
 
 #define SECURITY_LOCAL_SYSTEM_RID (0x00000012L)
 #define SECURITY_LOCAL_SERVICE_RID (0x00000013L)
@@ -1988,13 +2080,21 @@ typedef DWORD LCID;
 #define SECURITY_NT_NON_UNIQUE (0x00000015L)
 #define SECURITY_NT_NON_UNIQUE_SUB_AUTH_COUNT (3L)
 
+#define SECURITY_ENTERPRISE_READONLY_CONTROLLERS_RID (0x00000016L)
+
 #define SECURITY_BUILTIN_DOMAIN_RID (0x00000020L)
+#define SECURITY_WRITE_RESTRICTED_CODE_RID (0x00000021L)
 
 #define SECURITY_PACKAGE_BASE_RID (0x00000040L)
 #define SECURITY_PACKAGE_RID_COUNT (2L)
 #define SECURITY_PACKAGE_NTLM_RID (0x0000000AL)
 #define SECURITY_PACKAGE_SCHANNEL_RID (0x0000000EL)
 #define SECURITY_PACKAGE_DIGEST_RID (0x00000015L)
+
+#define SECURITY_SERVICE_ID_BASE_RID (0x00000050L)
+#define SECURITY_SERVICE_ID_RID_COUNT (6L)
+
+#define SECURITY_RESERVED_ID_BASE_RID (0x00000051L)
 
 #define SECURITY_MAX_ALWAYS_FILTERED (0x000003E7L)
 #define SECURITY_MIN_NEVER_FILTERED (0x000003E8L)
@@ -2018,6 +2118,7 @@ typedef DWORD LCID;
 #define DOMAIN_GROUP_RID_SCHEMA_ADMINS (0x00000206L)
 #define DOMAIN_GROUP_RID_ENTERPRISE_ADMINS (0x00000207L)
 #define DOMAIN_GROUP_RID_POLICY_ADMINS (0x00000208L)
+#define DOMAIN_GROUP_RID_READONLY_CONTROLLERS (0x00000209L)
 
 #define DOMAIN_ALIAS_RID_ADMINS (0x00000220L)
 #define DOMAIN_ALIAS_RID_USERS (0x00000221L)
@@ -2042,6 +2143,24 @@ typedef DWORD LCID;
 #define DOMAIN_ALIAS_RID_TS_LICENSE_SERVERS (0x00000231L)
 #define DOMAIN_ALIAS_RID_DCOM_USERS (0x00000232L)
 
+#define DOMAIN_ALIAS_RID_IUSERS (0x00000238L)
+#define DOMAIN_ALIAS_RID_CRYPTO_OPERATORS (0x00000239L)
+#define DOMAIN_ALIAS_RID_CACHEABLE_PRINCIPALS_GROUP (0x0000023BL)
+#define DOMAIN_ALIAS_RID_NON_CACHEABLE_PRINCIPALS_GROUP (0x0000023CL)
+#define DOMAIN_ALIAS_RID_EVENT_LOG_READERS_GROUP (0x0000023DL)
+
+#define SECURITY_MANDATORY_LABEL_AUTHORITY {0,0,0,0,0,16}
+#define SECURITY_MANDATORY_UNTRUSTED_RID (0x00000000L)
+#define SECURITY_MANDATORY_LOW_RID (0x00001000L)
+#define SECURITY_MANDATORY_MEDIUM_RID (0x00002000L)
+#define SECURITY_MANDATORY_HIGH_RID (0x00003000L)
+#define SECURITY_MANDATORY_SYSTEM_RID (0x00004000L)
+#define SECURITY_MANDATORY_PROTECTED_PROCESS_RID (0x00005000L)
+
+#define SECURITY_MANDATORY_MAXIMUM_USER_RID SECURITY_MANDATORY_SYSTEM_RID
+
+#define MANDATORY_LEVEL_TO_MANDATORY_RID(IL) (IL * 0x1000)
+
     typedef enum {
       WinNullSid = 0,WinWorldSid = 1,WinLocalSid = 2,WinCreatorOwnerSid = 3,WinCreatorGroupSid = 4,WinCreatorOwnerServerSid = 5,WinCreatorGroupServerSid = 6,WinNtAuthoritySid = 7,WinDialupSid = 8,WinNetworkSid = 9,WinBatchSid = 10,WinInteractiveSid = 11,WinServiceSid = 12,WinAnonymousSid = 13,WinProxySid = 14,WinEnterpriseControllersSid = 15,WinSelfSid = 16,WinAuthenticatedUserSid = 17,WinRestrictedCodeSid = 18,WinTerminalServerSid = 19,WinRemoteLogonIdSid = 20,WinLogonIdsSid = 21,WinLocalSystemSid = 22,WinLocalServiceSid = 23,WinNetworkServiceSid = 24,WinBuiltinDomainSid = 25,WinBuiltinAdministratorsSid = 26,WinBuiltinUsersSid = 27,WinBuiltinGuestsSid = 28,WinBuiltinPowerUsersSid = 29,WinBuiltinAccountOperatorsSid = 30,WinBuiltinSystemOperatorsSid = 31,WinBuiltinPrintOperatorsSid = 32,WinBuiltinBackupOperatorsSid = 33,WinBuiltinReplicatorSid = 34,WinBuiltinPreWindows2000CompatibleAccessSid = 35,WinBuiltinRemoteDesktopUsersSid = 36,WinBuiltinNetworkConfigurationOperatorsSid = 37,WinAccountAdministratorSid = 38,WinAccountGuestSid = 39,WinAccountKrbtgtSid = 40,WinAccountDomainAdminsSid = 41,WinAccountDomainUsersSid = 42,WinAccountDomainGuestsSid = 43,WinAccountComputersSid = 44,WinAccountControllersSid = 45,WinAccountCertAdminsSid = 46,WinAccountSchemaAdminsSid = 47,WinAccountEnterpriseAdminsSid = 48,WinAccountPolicyAdminsSid = 49,WinAccountRasAndIasServersSid = 50,WinNTLMAuthenticationSid = 51,WinDigestAuthenticationSid = 52,WinSChannelAuthenticationSid = 53,WinThisOrganizationSid = 54,WinOtherOrganizationSid = 55,WinBuiltinIncomingForestTrustBuildersSid = 56,WinBuiltinPerfMonitoringUsersSid = 57,WinBuiltinPerfLoggingUsersSid = 58,WinBuiltinAuthorizationAccessSid = 59,WinBuiltinTerminalServerLicenseServersSid = 60,WinBuiltinDCOMUsersSid = 61
     } WELL_KNOWN_SID_TYPE;
@@ -2050,12 +2169,15 @@ typedef DWORD LCID;
 #define ANONYMOUS_LOGON_LUID { 0x3e6,0x0 }
 #define LOCALSERVICE_LUID { 0x3e5,0x0 }
 #define NETWORKSERVICE_LUID { 0x3e4,0x0 }
+#define IUSER_LUID { 0x3e3, 0x0 }
 
 #define SE_GROUP_MANDATORY (0x00000001L)
 #define SE_GROUP_ENABLED_BY_DEFAULT (0x00000002L)
 #define SE_GROUP_ENABLED (0x00000004L)
 #define SE_GROUP_OWNER (0x00000008L)
 #define SE_GROUP_USE_FOR_DENY_ONLY (0x00000010L)
+#define SE_GROUP_INTEGRITY (0x00000020L)
+#define SE_GROUP_INTEGRITY_ENABLED (0x00000040L)
 #define SE_GROUP_LOGON_ID (0xC0000000L)
 #define SE_GROUP_RESOURCE (0x20000000L)
 
@@ -2114,7 +2236,8 @@ typedef DWORD LCID;
 #define SYSTEM_AUDIT_CALLBACK_OBJECT_ACE_TYPE (0xF)
 #define SYSTEM_ALARM_CALLBACK_OBJECT_ACE_TYPE (0x10)
 
-#define ACCESS_MAX_MS_V5_ACE_TYPE (0x10)
+#define SYSTEM_MANDATORY_LABEL_ACE_TYPE (0x11)
+#define ACCESS_MAX_MS_V5_ACE_TYPE (0x11)
 
 #define OBJECT_INHERIT_ACE (0x1)
 #define CONTAINER_INHERIT_ACE (0x2)
@@ -4043,6 +4166,15 @@ typedef DWORD LCID;
 #define IMAGE_REL_SH3_GPREL4_LONG 0x0011
 #define IMAGE_REL_SH3_TOKEN 0x0012
 
+#define IMAGE_REL_SHM_PCRELPT 0x0013
+#define IMAGE_REL_SHM_REFLO 0x0014
+#define IMAGE_REL_SHM_REFHALF 0x0015
+#define IMAGE_REL_SHM_RELLO 0x0016
+#define IMAGE_REL_SHM_RELHALF 0x0017
+#define IMAGE_REL_SHM_PAIR 0x0018
+
+#define IMAGE_REL_SH_NOMODE 0x8000
+
 #define IMAGE_REL_ARM_ABSOLUTE 0x0000
 #define IMAGE_REL_ARM_ADDR32 0x0001
 #define IMAGE_REL_ARM_ADDR32NB 0x0002
@@ -5614,6 +5746,7 @@ typedef DWORD LCID;
 #define ACTIVATION_CONTEXT_SECTION_COM_PROGID_REDIRECTION (7)
 #define ACTIVATION_CONTEXT_SECTION_GLOBAL_OBJECT_RENAME_TABLE (8)
 #define ACTIVATION_CONTEXT_SECTION_CLR_SURROGATES (9)
+#define ACTIVATION_CONTEXT_SECTION_APPLICATION_SETTINGS (10)
 
 #ifdef __cplusplus
   }
